// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown Mobile 1`] = `
<Dropdown
  items={
    Array [
      "Select",
      "Option 1",
      "Option 2",
      "Option 3",
      "Option 4",
    ]
  }
  label="My dropdown"
  onSelect={[Function]}
>
  <div
    className="bcgov-form"
  >
    <label
      className="bcgov-dropdown-label"
      htmlFor="dropdown"
    >
      My dropdown
    </label>
    <div
      className="bcgov-dropdown-wrapper"
    >
      <FaChevronDown
        className="fa-chevron-down"
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 448 512",
            }
          }
          className="fa-chevron-down"
        >
          <svg
            className="fa-chevron-down"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              key="0"
            />
          </svg>
        </IconBase>
      </FaChevronDown>
      <select
        className="bcgov-dropdown"
        data-testid="dropdown"
        id="dropdown"
        name="options"
        onChange={[Function]}
      >
        <option
          key="Select"
          value="Select"
        >
          Select
        </option>
        <option
          key="Option 1"
          value="Option 1"
        >
          Option 1
        </option>
        <option
          key="Option 2"
          value="Option 2"
        >
          Option 2
        </option>
        <option
          key="Option 3"
          value="Option 3"
        >
          Option 3
        </option>
        <option
          key="Option 4"
          value="Option 4"
        >
          Option 4
        </option>
      </select>
    </div>
  </div>
</Dropdown>
`;

exports[`Storyshots Dropdown No Pre Selected Option 1`] = `
<Dropdown
  items={
    Array [
      "Select",
      "Option 1",
      "Option 2",
      "Option 3",
      "Option 4",
    ]
  }
  label="My dropdown"
  onSelect={[Function]}
>
  <div
    className="bcgov-form"
  >
    <label
      className="bcgov-dropdown-label"
      htmlFor="dropdown"
    >
      My dropdown
    </label>
    <div
      className="bcgov-dropdown-wrapper"
    >
      <FaChevronDown
        className="fa-chevron-down"
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 448 512",
            }
          }
          className="fa-chevron-down"
        >
          <svg
            className="fa-chevron-down"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              key="0"
            />
          </svg>
        </IconBase>
      </FaChevronDown>
      <select
        className="bcgov-dropdown"
        data-testid="dropdown"
        id="dropdown"
        name="options"
        onChange={[Function]}
      >
        <option
          key="Select"
          value="Select"
        >
          Select
        </option>
        <option
          key="Option 1"
          value="Option 1"
        >
          Option 1
        </option>
        <option
          key="Option 2"
          value="Option 2"
        >
          Option 2
        </option>
        <option
          key="Option 3"
          value="Option 3"
        >
          Option 3
        </option>
        <option
          key="Option 4"
          value="Option 4"
        >
          Option 4
        </option>
      </select>
    </div>
  </div>
</Dropdown>
`;

exports[`Storyshots Dropdown Pre Selected Option 1`] = `
<Dropdown
  items={
    Array [
      "Option 1",
      "Option 2",
      "Option 3",
      "Option 4",
    ]
  }
  label="My dropdown"
  onSelect={[Function]}
>
  <div
    className="bcgov-form"
  >
    <label
      className="bcgov-dropdown-label"
      htmlFor="dropdown"
    >
      My dropdown
    </label>
    <div
      className="bcgov-dropdown-wrapper"
    >
      <FaChevronDown
        className="fa-chevron-down"
      >
        <IconBase
          attr={
            Object {
              "viewBox": "0 0 448 512",
            }
          }
          className="fa-chevron-down"
        >
          <svg
            className="fa-chevron-down"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 448 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
              key="0"
            />
          </svg>
        </IconBase>
      </FaChevronDown>
      <select
        className="bcgov-dropdown"
        data-testid="dropdown"
        id="dropdown"
        name="options"
        onChange={[Function]}
      >
        <option
          key="Option 1"
          value="Option 1"
        >
          Option 1
        </option>
        <option
          key="Option 2"
          value="Option 2"
        >
          Option 2
        </option>
        <option
          key="Option 3"
          value="Option 3"
        >
          Option 3
        </option>
        <option
          key="Option 4"
          value="Option 4"
        >
          Option 4
        </option>
      </select>
    </div>
  </div>
</Dropdown>
`;
